feat: update card management contract to specify operation
